kubernetes/fed-mgr-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fed-mgr-dashboard
  name: fed-mgr-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fed-mgr-dashboard
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: fed-mgr-dashboard
    spec:
      containers:
        - image: harbor.cloud.infn.it/datacloud-middleware/fed-mgr-dashboard:latest
          name: fed-mgr-dashboard
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
