kubernetes/fed-mgr-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fed-mgr-dashboard
  name: fed-mgr-dashboard
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 80
  selector:
    io.kompose.service: fed-mgr-dashboard
